fixed the feathers not showing on firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -292,6 +292,11 @@ header {
     }
 }
 
+main {
+    position: relative;
+    z-index: 1;
+}
+
 /* Hero section */
 /* Hero Section */
 .hero-section {
@@ -2024,7 +2029,7 @@ footer {
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: -1;
+    z-index: 0;
     overflow: hidden;
 }
 
@@ -2032,7 +2037,7 @@ footer {
     position: absolute;
     width: 20px;
     height: 30px;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%238ac6ff" opacity="0.6"><path d="M12 2c0 0-4.5 3-5 9s3 8 5 11c2-3 5-5 5-11s-5-9-5-9zm0 18c-1.5-2.5-3-4-3-7s2-5 3-7c1 2 3 4 3 7s-1.5 4.5-3 7z"/></svg>');
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%238ac6ff' opacity='0.6'%3E%3Cpath d='M12 2c0 0-4.5 3-5 9s3 8 5 11c2-3 5-5 5-11s-5-9-5-9zm0 18c-1.5-2.5-3-4-3-7s2-5 3-7c1 2 3 4 3 7s-1.5 4.5-3 7z'/%3E%3C/svg%3E");
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 0;
@@ -2040,7 +2045,7 @@ footer {
     filter: drop-shadow(0 0 3px var(--accent-glow));
 
     .light-theme & {
-        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23667eea" opacity="0.8"><path d="M12 2c0 0-4.5 3-5 9s3 8 5 11c2-3 5-5 5-11s-5-9-5-9zm0 18c-1.5-2.5-3-4-3-7s2-5 3-7c1 2 3 4 3 7s-1.5 4.5-3 7z"/></svg>');
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23667eea' opacity='0.8'%3E%3Cpath d='M12 2c0 0-4.5 3-5 9s3 8 5 11c2-3 5-5 5-11s-5-9-5-9zm0 18c-1.5-2.5-3-4-3-7s2-5 3-7c1 2 3 4 3 7s-1.5 4.5-3 7z'/%3E%3C/svg%3E");
     }
 }
 
